2011-02-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/port.mk,
	  src/SDCCsymt.h,
	  src/SDCCsymt.c,
	  src/SDCCglobl.h,
	  src/SDCCmain.c,
	  src/SDCCutil.c,
	  src/SDCClrange.c,
	  src/mcs51/gen.c:
	  Minor improvements from the optralloc branch.

2011-02-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* sim/ucsim/z80.src/inst_cb.cc:
	  Fixed #3166058.
	* src/z80/gen.c:
	  Improvements from the optralloc branch.

2011-02-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Some fixes from from the optralloc branch.

2011-02-03 Borut Razem <borut.razem AT siol.net>

	* support/makebin/makebin.c:
	  fixed bugs #3171768: makebin fails when data is at the last byte,
	  #3171795: If makebin read_ihx fails, it should exit with an error code

2011-02-03 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-z80.def:
	  Peephole improvements from the optralloc branch.
	* src/z80/gen.c:
	  Some cleanups from the optralloc branch.

2011-02-02 Borut Razem <borut.razem AT siol.net>

	* sdas/linksrc/Makefile.in:
	  fixed bug #3170674: Incorrect file ownerships after make install

2011-01-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (mova): added early optimization,
	  (getFreePtr): simplified aopp to aop,	
	  (aopPtrForSym): factored out of aopForSym,
	  (freeAsmop,freeForBranchAsmop): fixed bug 3130806 for AOP_STK
	* src/mcs51/gen.h (asmop): replaced aop_stk with aop_sym
	* support/regression/tests/bug3130806.c: new, added

2011-01-25 Borut Razem <borut.razem AT siol.net>

	* src/SDCCsysytem.c: removed MSCV 2010 warnings

2011-01-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.h,
	  src/SDCCicode.c:
	  Make argument to validateOpType non-const.

2011-01-17 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c: fixed bug introduced by me 2011-01-16
	* support/Util/dbuf.c, support/Util/dbuf.h, src/SDCCsystem.c: