@@ -7,7 +7,17 @@
 	  src/SDCCmain.c,
 	  src/SDCCutil.c,
 	  src/SDCClrange.c,
-	  src/mcs51/gen.c:
+	  src/SDCCicode.h,
+	  src/SDCCicode.c,
+	  src/mcs51/gen.c,
+	  src/z80/ralloc.c,
+	  src/pic14/gen.c,
+	  src/pic14/ralloc.c,
+	  src/pic16/gen.c,
+	  src/pic16/genutils.c,
+	  src/hc08/gen.c,
+	  src/ds390/gen.c,
+	  src/ds390/ralloc.c:
 	  Minor improvements from the optralloc branch.
 
 2011-02-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
